syntax = "proto3";

package api.helloworld.v1;

import "google/api/annotations.proto";

option go_package = "helloworld/api/helloworld/v1;v1";

service Student {
	rpc CreateStudent (CreateStudentRequest) returns (CreateStudentReply);
	rpc UpdateStudent (UpdateStudentRequest) returns (UpdateStudentReply);
	rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentReply);
	rpc GetStudent (GetStudentRequest) returns (GetStudentReply);
	rpc ListStudent (ListStudentRequest) returns (ListStudentReply);
	// Sends a greeting
	rpc Hello (HelloReq) returns (HelloResp) {
		option (google.api.http) = {
			get: "/hello/{name}",
			additional_bindings{
				post: "/hello/sayHello",
				body:"*",
			}
		};
	}
}

message HelloReq {
	string name = 1;
	string id = 2;
	string sayName = 3;
}
message HelloResp {
	string message = 1;
	string text = 2;
}


message CreateStudentRequest {}
message CreateStudentReply {}

message UpdateStudentRequest {}
message UpdateStudentReply {}

message DeleteStudentRequest {}
message DeleteStudentReply {}

message GetStudentRequest {}
message GetStudentReply {}

message ListStudentRequest {}
message ListStudentReply {}